--- a/Classes/Environment.html
+++ b/Classes/Environment.html
@@ -19,8 +19,8 @@
 <div id='summary'>A dictionary which can serve as a 'name space' for functions</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Collections/Environment.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Collections/Environment.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/IdentityDictionary.html">IdentityDictionary</a> : <a href="../Classes/Dictionary.html">Dictionary</a> : <a href="../Classes/Set.html">Set</a> : <a href="../Classes/Collection.html">Collection</a> : <a href="../Classes/Object.html">Object</a></div>
-<div id='subclasses'>Subclasses: <a href="../Classes/Event.html">Event</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Collections/Environment.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Collections/Environment.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/IdentityDictionary.html">IdentityDictionary</a> : <a href="../Classes/Dictionary.html">Dictionary</a> : <a href="../Classes/Set.html">Set</a> : <a href="../Classes/Collection.html">Collection</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='subclasses'>Subclasses: <a href="../Classes/EM.html">EM</a>, <a href="../Classes/Event.html">Event</a></div>
 <div id='related'>See also: <a href="./../Classes/Event.html">Event</a>, <a href="./../Classes/IdentityDictionary.html">IdentityDictionary</a></div>
 </div>
 <div id='toc'>
@@ -258,4 +258,4 @@ WARNING:
 // because Object:reset responds
 e.reset;</pre>
 </div>
-<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Environment.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/Environment.schelp</a><br>link::Classes/Environment::<br>sc version: 3.8.0</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/Environment.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/Environment.schelp</a><br>link::Classes/Environment::<br>sc version: 3.8.0</div></div></body></html>
