--- a/Classes/Function.html
+++ b/Classes/Function.html
@@ -106,6 +106,7 @@
 <li class='toc3'><a href='#-makeFlopFunc'>makeFlopFunc</a> </li>
 <li class='toc3'><a href='#-numArgs'>numArgs</a> </li>
 <li class='toc3'><a href='#-numVars'>numVars</a> </li>
+<li class='toc3'><a href='#-patternToPdef'>patternToPdef</a> </li>
 <li class='toc3'><a href='#-penFill'>penFill</a> </li>
 <li class='toc3'><a href='#-plotAudio'>plotAudio</a> </li>
 <li class='toc3'><a href='#-postString'>postString</a> </li>
@@ -456,6 +457,8 @@ x.nextN(8);</pre>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-makeFlopFunc' href='./../Overviews/Methods.html#makeFlopFunc'>makeFlopFunc</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-numArgs' href='./../Overviews/Methods.html#numArgs'>numArgs</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-numVars' href='./../Overviews/Methods.html#numVars'>numVars</a> </h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-patternToPdef' href='./../Overviews/Methods.html#patternToPdef'>patternToPdef</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Extensions/extFunction.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Extensions/extFunction.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-penFill' href='./../Overviews/Methods.html#penFill'>penFill</a> (<span class='argstr'>rect</span>, <span class='argstr'>alpha: 1</span>)</h3>
 <div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/GUI/Extensions/extGradient-fill.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/GUI/Extensions/extGradient-fill.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-plotAudio' href='./../Overviews/Methods.html#plotAudio'>plotAudio</a> (<span class='argstr'>duration: 0.01</span>, <span class='argstr'>minval: -1</span>, <span class='argstr'>maxval: 1</span>, <span class='argstr'>server</span>, <span class='argstr'>bounds</span>)</h3>
