--- a/Classes/SynthFile.html
+++ b/Classes/SynthFile.html
@@ -14,7 +14,7 @@
 <div class='contents'>
 <div class='header'>
 <div id='label'>SuperCollider CLASSES (extension)</div>
-<div id='categories'><a href='./../Browse.html#LiveCoding'>LiveCoding</a></div>
+<div id='categories'><a href='./../Browse.html#Libraries>ModImprov'>Libraries>ModImprov</a></div>
 <h1>SynthFile</h1>
 <div id='summary'>Write synth objects into File</div>
 </div>
@@ -33,6 +33,7 @@
 <li class='toc3'><a href='#*post'>post</a> </li>
 <li class='toc3'><a href='#*postAll'>postAll</a> </li>
 <li class='toc3'><a href='#*remove'>remove</a> </li>
+<li class='toc3'><a href='#*string'>string</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
@@ -58,6 +59,7 @@
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*post' href='./../Overviews/Methods.html#post'>post</a> (<span class='argstr'>class: 'filter'</span>, <span class='argstr'>key</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*postAll' href='./../Overviews/Methods.html#postAll'>postAll</a> (<span class='argstr'>class: 'filter'</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*remove' href='./../Overviews/Methods.html#remove'>remove</a> (<span class='argstr'>class: 'filter'</span>, <span class='argstr'>key</span>)</h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*string' href='./../Overviews/Methods.html#string'>string</a> (<span class='argstr'>class: 'filter'</span>, <span class='argstr'>key</span>)</h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
