--- a/Classes/CCResponder.html
+++ b/Classes/CCResponder.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,15 +19,15 @@
 <div id='summary'>allow functions to be registered to respond to MIDI control change events</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/SCClassLibrary/Common/Control/<a href='file:///Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/SCClassLibrary/Common/Control/MIDIResponder.sc'>MIDIResponder.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MIDIResponder.html">MIDIResponder</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/MIDIResponder.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/MIDIResponder.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MIDIResponder.html">MIDIResponder</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/MIDIFunc.html">MIDIFunc</a>, <a href="./../Classes/MIDIdef.html">MIDIdef</a>, <a href="./../Classes/MIDIResponder.html">MIDIResponder</a>, <a href="./../Classes/NoteOnResponder.html">NoteOnResponder</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*add'>add</a> </li>
 <li class='toc3'><a href='#*ccinit'>ccinit</a> </li>
 <li class='toc3'><a href='#*ccnumr'>ccnumr</a> </li>
@@ -38,12 +37,12 @@
 <li class='toc3'><a href='#*responders'>responders</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-learn'>learn</a> </li>
-<li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-matchEvent'>matchEvent</a> </li>
 </ul></ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
-<div class='note'><span class='notelabel'>NOTE:</span> SC 3.5 added the <a href="./../Classes/MIDIFunc.html">MIDIFunc</a> and <a href="./../Classes/MIDIdef.html">MIDIdef</a> classes. These are faster, and aim to have a more convenient, logical and consistent interface, which shares a common design with <a href="./../Classes/OSCFunc.html">OSCFunc</a> and <a href="./../Classes/OSCdef.html">OSCdef</a> They still lack some features of the MIDIresponder classes.</div>
+<div class='note'><span class='notelabel'>NOTE:</span> SC 3.5 added the <a href="./../Classes/MIDIFunc.html">MIDIFunc</a> and <a href="./../Classes/MIDIdef.html">MIDIdef</a> classes. These are faster, and aim to have a more convenient, logical and consistent interface, which shares a common design with <a href="./../Classes/OSCFunc.html">OSCFunc</a> and <a href="./../Classes/OSCdef.html">OSCdef</a>. They also provide support for all MIDI message types.</div>
 <p><h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>function</span>, <span class='argstr'>src</span>, <span class='argstr'>chan</span>, <span class='argstr'>num</span>, <span class='argstr'>value</span>, <span class='argstr'>install: true</span>, <span class='argstr'>swallowEvent: false</span>)</h3>
 <div class='method'>
@@ -56,8 +55,8 @@
 <p>An <a href="./../Classes/Integer.html">Integer</a> between 0 and 127 that selects which controller number to match. nil matches all. May also be a <a href="./../Classes/Function.html">Function</a> which will be evaluated to determine the match. eg: { |val| val &gt;= 4 }<tr><td class='argumentname'>value<td class='argumentdesc'>
 <p>An <a href="./../Classes/Integer.html">Integer</a> between 0 and 127 to filter values. nil matches all. May also be a <a href="./../Classes/Function.html">Function</a> which will be evaluated to determine the match. eg: { |val| val &lt; 50 }<tr><td class='argumentname'>install<td class='argumentdesc'>
 <p>If true, install the responder automatically so it is active and ready to respond. If false, then it will be inactive.<tr><td class='argumentname'>swallowEvent<td class='argumentdesc'>
-<p>If true, then if the midi event is matched, cease testing any further responders. Note that doing this will prevent any other responders of this type from responding, including ones added behind the scenes in classes. Note also that this functionality is sensitive to the order in which responders are added. </table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<p>If true, then if the midi event is matched, cease testing any further responders. Note that doing this will prevent any other responders of this type from responding, including ones added behind the scenes in classes. Note also that this functionality is sensitive to the order in which responders are added. </table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*add' href='./../Overviews/Methods.html#add'>add</a> (<span class='argstr'>resp</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ccinit' href='./../Overviews/Methods.html#ccinit'>ccinit</a> </h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*ccnumr' href='./../Overviews/Methods.html#ccnumr'>ccnumr</a> </h3>
@@ -76,8 +75,8 @@ c = CCResponder({ |src,chan,num,value|
     c.learn; // wait for the first controller
 )
 CCResponder.removeAll</pre>
-</div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+</div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-matchEvent' href='./../Overviews/Methods.html#matchEvent'>matchEvent</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-matchEvent' href='./../Overviews/Methods.html#matchEvent'>matchEvent</a> = <span class='argstr'>midiEvent</span></h3>
 <div class='supmethod'>From superclass: <a href='./../Classes/MIDIResponder.html'>MIDIResponder</a></div>
@@ -107,4 +106,4 @@ c.remove</pre>
 
 c.remove</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/HelpSource/Classes/CCResponder.schelp'>/Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/HelpSource/Classes/CCResponder.schelp</a><br>link::Classes/CCResponder::<br>sc version: 3.6.5</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/CCResponder.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/CCResponder.schelp</a><br>link::Classes/CCResponder::<br>sc version: 3.8.0</div></div></body></html>
