--- a/Classes/ContiguousBlockAllocator.html
+++ b/Classes/ContiguousBlockAllocator.html
@@ -19,20 +19,20 @@
 <div id='summary'>for better handling of dynamic allocation</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Control/<a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Control/Engine.sc'>Engine.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/Engine.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Control/Engine.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/Server.html">Server</a>, <a href="./../Classes/PowerOfTwoAllocator.html">PowerOfTwoAllocator</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-alloc'>alloc</a> </li>
 <li class='toc3'><a href='#-free'>free</a> </li>
 <li class='toc3'><a href='#-reserve'>reserve</a> </li>
-<li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-addToFreed'>addToFreed</a> </li>
 <li class='toc3'><a href='#-blocks'>blocks</a> </li>
 <li class='toc3'><a href='#-debug'>debug</a> </li>
@@ -48,7 +48,7 @@
 <p>Normally you will not need to address the allocators directly. However, ContiguousBlockAllocator adds one feature not present in PowerOfTwoAllocator, namely the <em>reserve</em> method.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>size</span>, <span class='argstr'>pos: 0</span>)</h3>
 <div class='method'>
-<p>Create a new allocator with <em>size</em> slots. You may block off the first <em>pos</em> slots (the server's audioBusAllocator does this to reserve the hardware input and output buses).</div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>Create a new allocator with <em>size</em> slots. You may block off the first <em>pos</em> slots (the server's audioBusAllocator does this to reserve the hardware input and output buses).</div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-alloc' href='./../Overviews/Methods.html#alloc'>alloc</a> (<span class='argstr'>n: 1</span>)</h3>
 <div class='method'>
@@ -56,8 +56,8 @@
 <div class='method'>
 <p>Free a previously allocated block starting at <em>address</em>.</div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-reserve' href='./../Overviews/Methods.html#reserve'>reserve</a> (<span class='argstr'>address</span>, <span class='argstr'>size: 1</span>, <span class='argstr'>warn: true</span>)</h3>
 <div class='method'>
-<p>Mark a specific range of addresses as used so that the alloc method will not return any addresses within that range.</div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<p>Mark a specific range of addresses as used so that the alloc method will not return any addresses within that range.</div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-addToFreed' href='./../Overviews/Methods.html#addToFreed'>addToFreed</a> (<span class='argstr'>block</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-blocks' href='./../Overviews/Methods.html#blocks'>blocks</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-debug' href='./../Overviews/Methods.html#debug'>debug</a> (<span class='argstr'>text</span>)</h3>
@@ -65,4 +65,4 @@
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-findNext' href='./../Overviews/Methods.html#findNext'>findNext</a> (<span class='argstr'>address</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-findPrevious' href='./../Overviews/Methods.html#findPrevious'>findPrevious</a> (<span class='argstr'>address</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-removeFromFreed' href='./../Overviews/Methods.html#removeFromFreed'>removeFromFreed</a> (<span class='argstr'>block</span>)</h3>
-<div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/ContiguousBlockAllocator.schelp'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/ContiguousBlockAllocator.schelp</a><br>link::Classes/ContiguousBlockAllocator::<br>sc version: 3.7.2</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/ContiguousBlockAllocator.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/ContiguousBlockAllocator.schelp</a><br>link::Classes/ContiguousBlockAllocator::<br>sc version: 3.8.0</div></div></body></html>
