--- a/Classes/GUI.html
+++ b/Classes/GUI.html
@@ -7,7 +7,6 @@
 <script src='./../docmap.js' type='text/javascript'></script>
 <script src='./../prettify.js' type='text/javascript'></script>
 <script src='./../lang-sc.js' type='text/javascript'></script>
-<script src='./../MathJax/MathJax.js?config=TeX-AMS_HTML,scmathjax' type='text/javascript'></script>
 <script type='text/javascript'>var helpRoot='./..';</script>
 </head>
 <ul id='menubar'></ul>
@@ -20,15 +19,15 @@
 <div id='summary'>Factory abstraction for all GUI related core classes</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/SCClassLibrary/Common/GUI/<a href='file:///Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/SCClassLibrary/Common/GUI/GUI.sc'>GUI.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/GUI/backwardsCompatibility/GUI.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/GUI/backwardsCompatibility/GUI.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Overviews/GUI-Classes.html">List of GUI classes</a>, <a href="./../Guides/GUI-Introduction.html">Introduction to GUI</a>, <a href="./../Classes/ViewRedirect.html">ViewRedirect</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
-<ul class='toc'><li class='toc2'><a href='#Switching and Referring to GUI Kits'>Switching and Referring to GUI Kits</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Extending GUI Kits'>Extending GUI Kits</a></li>
+<ul class='toc'><li class='toc2'><a href='#Switching%20and%20Referring%20to%20GUI%20Kits'>Switching and Referring to GUI Kits</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Extending%20GUI%20Kits'>Extending GUI Kits</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Methods and Variables for GUI'>Methods and Variables for GUI</a></li>
+<ul class='toc'><li class='toc2'><a href='#Methods%20and%20Variables%20for%20GUI'>Methods and Variables for GUI</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
 <li class='toc3'><a href='#*makeGUI'>makeGUI</a> </li>
 <li class='toc3'><a href='#*initClass'>initClass</a> </li>
@@ -47,24 +46,24 @@
 <li class='toc3'><a href='#*schemes'>schemes</a> </li>
 <li class='toc3'><a href='#*skin'>skin</a> </li>
 <li class='toc3'><a href='#*skins'>skins</a> </li>
-</ul><li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+</ul><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*qt'>qt</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
-<p>SuperCollider currently supports three operating system platforms: Macintosh OSX, UNIX (Linux and FreeBSD) and Windows (with some limitations).
+<p>SuperCollider currently supports three operating system platforms: Macintosh OSX, UNIX (Linux and FreeBSD) and Windows (with some limitations).<div class='warning'><span class='warninglabel'>WARNING:</span> The redirect system has been deprecated, please use the view classes directly.</div>
 <p>Graphical User Interface (GUI) code, for the most part, does not need to worry about which platform is executing the code because of the <strong>view redirect</strong> system. At any time, one and only one <strong>GUI kit</strong> is active. This determines which GUI classes will be used for rendering. These classes, the active views, have prefixes for the GUI kit that created the view object: SCWindow vs. JSCWindow vs. QWindow.<table>
 <tr><td><strong>GUI kit</strong><td><strong>Code to activate</strong><td><strong>Supported platform(s)</strong><td><strong>Framework</strong><td><strong>Prefix</strong><tr><td>Cocoa<td><code class='code prettyprint lang-sc'>GUI.cocoa</code><td>Mac OSX only<td>Cocoa<td>SC-<tr><td>SwingOSC<td><code class='code prettyprint lang-sc'>GUI.swing</code><td>All<td>Java + Swing<td>JSC-<tr><td>Qt<td><code class='code prettyprint lang-sc'>GUI.qt</code><td>All<td>Qt<td>Q-</table>
 
 <p>In general, users should not concern themselves with the prefixes. Instead, work with the <em>redirect</em> classes, which have no prefix: Window, Button, Slider, etc. The redirect class will ask the currently-selected kit which <em>implementation class</em> should be used.
-<p>The GUI kit (CocoaGUI, QtGUI, SwingGUI) maps the generic view names to the implementing classes: <code class='code prettyprint lang-sc'>Window --&gt; SCWindow, QWindow or JSCWindow</code>. These schemes are in turn used by <a href="./../Classes/ViewRedirect.html">ViewRedirect</a> to provide a simple cross-platform gui syntax. The GUI class provides utilities for switching kits and other cross platform tasks. 
+<p>The GUI kit (CocoaGUI, QtGUI, SwingGUI) maps the generic view names to the implementing classes: <code class='code prettyprint lang-sc'>Window --&gt; SCWindow, QWindow or JSCWindow</code>. These schemes are in turn used by <a href="./../Classes/ViewRedirect.html">ViewRedirect</a> to provide a simple cross-platform gui syntax. The GUI class provides utilities for switching kits and other cross platform tasks.
 <p>You can get your available schemes (depending on what you installed) with:<pre class='code prettyprint lang-sc'>GUI.schemes;</pre>
 
-<p>For a complete list of gui classes and redirects, see <a href="./../Overviews/GUI-Classes.html">List of GUI classes</a>.<h3><a class='anchor' name='Switching and Referring to GUI Kits'>Switching and Referring to GUI Kits</a></h3>
+<p>For a complete list of gui classes and redirects, see <a href="./../Overviews/GUI-Classes.html">List of GUI classes</a>.<h3><a class='anchor' name='Switching%20and%20Referring%20to%20GUI%20Kits'>Switching and Referring to GUI Kits</a></h3>
 
-<p>As of this writing, three GUI kits are available through the GUI class: <a href="./../Classes/QtGUI.html">QtGUI</a> (Qt framework), <a href="./../Classes/CocoaGUI.html">CocoaGUI</a> (Mac OS X native) and <a href="./../Classes/SwingGUI">SwingGUI</a> (Java). Note that <a href="./../Classes/SwingOSC">SwingOSC</a> is not part of every SuperCollider distribution, so you may have to install it separately.
+<p>As of this writing, three GUI kits are available through the GUI class: <a href="./../Classes/QtGUI.html">QtGUI</a> (Qt framework), <a href="./../Classes/CocoaGUI">CocoaGUI</a> (Mac OS X native) and <a href="./../Classes/SwingGUI">SwingGUI</a> (Java). Note that <a href="./../Classes/SwingOSC">SwingOSC</a> is not part of every SuperCollider distribution, so you may have to install it separately.
 <p>You can switch the GUI kit by calling one of the following class methods:<pre class='code prettyprint lang-sc'>GUI.qt;        // use Qt in subsequent GUI creation procedures
 GUI.cocoa;    // use cocoa in subsequent GUI creation procedures
 GUI.swing;    // use swing in subsequent GUI creation procedures
@@ -92,7 +91,7 @@ GUI.current.id.postln;    // --&gt; still cocoa</pre>
 GUI.current.id.postln;    // --&gt; still cocoa
 GUI.set( x );            // now we make SwingOSC the current kit
 GUI.window.viewPalette;</pre>
-<h3><a class='anchor' name='Extending GUI Kits'>Extending GUI Kits</a></h3>
+<h3><a class='anchor' name='Extending%20GUI%20Kits'>Extending GUI Kits</a></h3>
 
 <p>GUI Kits can be extended with custom classes by using their respective <code class='code prettyprint lang-sc'>put</code> methods:<pre class='code prettyprint lang-sc'>GUI.get( \cocoa ).put( \myText, SCStaticText );
 GUI.get( \swing ).put( \myText, JSCStaticText );
@@ -118,7 +117,7 @@ GUI.swing;
     }
 }</pre>
 <h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3><a class='anchor' name='Methods and Variables for GUI'>Methods and Variables for GUI</a></h3>
+<h3><a class='anchor' name='Methods%20and%20Variables%20for%20GUI'>Methods and Variables for GUI</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>key</span>)</h3>
 <div class='method'>
 <p></div><h3 class='cmethodname'><span class='methprefix'>*</span><a name='*makeGUI' href='./../Overviews/Methods.html#makeGUI'>makeGUI</a> (<span class='argstr'>key</span>, <span class='argstr'>args</span>, <span class='argstr'>properties</span>)</h3>
@@ -134,7 +133,7 @@ offColor: Color.clear,
 gap: 0@0,
 margin: 2@2,
 buttonHeight: 16</pre>
-</div><h3 class='cmethodname'><span class='methprefix'>*</span><a name='*cocoa' href='./../Overviews/Methods.html#cocoa'>cocoa</a> </h3>
+</div><h3 class='cmethodname'><span class='methprefix'>*</span><a name='*cocoa' href='./../Overviews/Methods.html#cocoa'>cocoa</a>: METHOD NOT FOUND!</h3>
 <div class='method'>
 <p>Makes Cocoa (Mac OS X GUI) the current scheme and returns it. Subsequent GUI object calls to GUI are delegated to cocoa. Returns the current (cocoa) scheme.</div><h3 class='cmethodname'><span class='methprefix'>*</span><a name='*swing' href='./../Overviews/Methods.html#swing'>swing</a> </h3>
 <div class='method'>
@@ -157,7 +156,7 @@ buttonHeight: 16</pre>
 <tr><td class='argumentname'>aScheme<td class='argumentdesc'>
 <p>An instance of <a href="./../Classes/Symbol.html">Symbol</a>. The scheme to use as current scheme.</table></div><h3 class='cmethodname'><span class='methprefix'>*</span><a name='*use' href='./../Overviews/Methods.html#use'>use</a> (<span class='argstr'>aScheme</span>, <span class='argstr'>func</span>)</h3>
 <div class='method'>
-<p>Executes a function body, temporarily setting the current GUI scheme. This is usefull inside view's action functions in order to make this function use the GUI scheme that was originally used for the view of the action, even if the scheme has been switched meanwhile.<h4>Arguments:</h4>
+<p>Executes a function body, temporarily setting the current GUI scheme. This is useful inside view's action functions in order to make this function use the GUI scheme that was originally used for the view of the action, even if the scheme has been switched meanwhile.<h4>Arguments:</h4>
 <table class='arguments'>
 <tr><td class='argumentname'>aScheme<td class='argumentdesc'>
 <p>The scheme to use during the function execution.<tr><td class='argumentname'>func<td class='argumentdesc'>
@@ -187,9 +186,9 @@ buttonHeight: 16</pre>
 <div class='method'>
 <p>A class variable. Returns the current skin.</div><h3 class='cmethodname'><span class='methprefix'>*</span><a name='*skins' href='./../Overviews/Methods.html#skins'>skins</a> </h3>
 <div class='method'>
-<p>A class variable. Returns an <a href="./../Classes/IdentityDictionary.html">IdentityDictionary</a> of registered skins.</div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<p>A class variable. Returns an <a href="./../Classes/IdentityDictionary.html">IdentityDictionary</a> of registered skins.</div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*qt' href='./../Overviews/Methods.html#qt'>qt</a> </h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/HelpSource/Classes/GUI.schelp'>/Applications/SuperCollider 3.6.5/SuperCollider 3.6.5.app/Contents/Resources/HelpSource/Classes/GUI.schelp</a><br>link::Classes/GUI::<br>sc version: 3.6.5</div></div></body></html>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/GUI.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/GUI.schelp</a><br>link::Classes/GUI::<br>sc version: 3.8.0</div></div></body></html>
