--- a/Classes/IdentityDictionary.html
+++ b/Classes/IdentityDictionary.html
@@ -19,8 +19,8 @@
 <div id='summary'>associative collection mapping keys to values</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Collections/Dictionary.sc'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Collections/Dictionary.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Dictionary.html">Dictionary</a> : <a href="../Classes/Set.html">Set</a> : <a href="../Classes/Collection.html">Collection</a> : <a href="../Classes/Object.html">Object</a></div>
-<div id='subclasses'>Subclasses: <a href="../Classes/Environment.html">Environment</a>, <a href="../Classes/NodeMap.html">NodeMap</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Collections/Dictionary.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Collections/Dictionary.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Dictionary.html">Dictionary</a> : <a href="../Classes/Set.html">Set</a> : <a href="../Classes/Collection.html">Collection</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='subclasses'>Subclasses: <a href="../Classes/Environment.html">Environment</a>, <a href="../Classes/FuzzyDictionary.html">FuzzyDictionary</a>, <a href="../Classes/NodeMap.html">NodeMap</a></div>
 <div id='related'>See also: <a href="./../Classes/Environment.html">Environment</a>, <a href="./../Classes/Event.html">Event</a></div>
 </div>
 <div id='toc'>
@@ -142,4 +142,4 @@ a.play(quant:(quant: 1, phase: 1.0.rand));
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-put' href='./../Overviews/Methods.html#put'>put</a> (<span class='argstr'>key</span>, <span class='argstr'>value</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-scanFor' href='./../Overviews/Methods.html#scanFor'>scanFor</a> (<span class='argstr'>argKey</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-storeItemsOn' href='./../Overviews/Methods.html#storeItemsOn'>storeItemsOn</a> (<span class='argstr'>stream</span>, <span class='argstr'>itemsPerLine: 5</span>)</h3>
-<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/IdentityDictionary.schelp'>/Applications/SuperCollider 3.8.0/SuperCollider.app/Contents/Resources/HelpSource/Classes/IdentityDictionary.schelp</a><br>link::Classes/IdentityDictionary::<br>sc version: 3.8.0</div></div></body></html>
+<div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/IdentityDictionary.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/IdentityDictionary.schelp</a><br>link::Classes/IdentityDictionary::<br>sc version: 3.8.0</div></div></body></html>
