--- a/Classes/MainImprov.html
+++ b/Classes/MainImprov.html
@@ -19,34 +19,45 @@
 <div id='summary'>(Undocumented class)</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/<a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/MainImprov.sc'>MainImprov.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
-<div id='subclasses'>Subclasses: <a href="../Classes/CallWindow.html">CallWindow</a>, <a href="../Classes/GlobalHistory.html">GlobalHistory</a>, <a href="../Classes/Plane.html">Plane</a>, <a href="../Classes/PostWindow.html">PostWindow</a>, <a href="../Classes/Space.html">Space</a>, <a href="../Classes/SynthFile.html">SynthFile</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/MainImprov.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/MainImprov.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='subclasses'>Subclasses: <a href="../Classes/Block.html">Block</a>, <a href="../Classes/CallWindow.html">CallWindow</a>, <a href="../Classes/GlobalHistory.html">GlobalHistory</a>, <a href="../Classes/ModFile.html">ModFile</a>, <a href="../Classes/ModMap.html">ModMap</a>, <a href="../Classes/Plane.html">Plane</a>, <a href="../Classes/PostWindow.html">PostWindow</a>, <a href="../Classes/Space.html">Space</a>, <a href="../Classes/Store.html">Store</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-initMainImprov'>initMainImprov</a> </li>
 <li class='toc3'><a href='#-mainPath'>mainPath</a> </li>
-</ul></ul><li class='toc1'><a href='#Help template'>Help template</a></li>
+<li class='toc3'><a href='#-nodeTime'>nodeTime</a> </li>
+<li class='toc3'><a href='#-postWhere'>postWhere</a> </li>
+<li class='toc3'><a href='#-postWin'>postWin</a> </li>
+<li class='toc3'><a href='#-server'>server</a> </li>
+</ul></ul><li class='toc1'><a href='#Help%20template'>Help template</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>This class is missing documentation.<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> </h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-initMainImprov' href='./../Overviews/Methods.html#initMainImprov'>initMainImprov</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-mainPath' href='./../Overviews/Methods.html#mainPath'>mainPath</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-mainPath' href='./../Overviews/Methods.html#mainPath'>mainPath</a> = value</h3>
-<h2><a class='anchor' name='Help template'>Help template</a></h2>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-nodeTime' href='./../Overviews/Methods.html#nodeTime'>nodeTime</a></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-nodeTime' href='./../Overviews/Methods.html#nodeTime'>nodeTime</a> = value</h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-postWhere' href='./../Overviews/Methods.html#postWhere'>postWhere</a></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-postWhere' href='./../Overviews/Methods.html#postWhere'>postWhere</a> = value</h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-postWin' href='./../Overviews/Methods.html#postWin'>postWin</a></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-postWin' href='./../Overviews/Methods.html#postWin'>postWin</a> = value</h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-server' href='./../Overviews/Methods.html#server'>server</a> </h3>
+<h2><a class='anchor' name='Help%20template'>Help template</a></h2>
 
 <p>Copy and paste the text below and save to HelpSource/Classes/MainImprov.schelp<pre class='code prettyprint lang-sc'>TITLE:: MainImprov
 summary:: (put short description here)
@@ -67,7 +78,27 @@ returns:: (describe returnvalue here)
 
 INSTANCEMETHODS::
 
+METHOD:: server
+(describe method here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: nodeTime
+(describe method here)
+
+returns:: (describe returnvalue here)
+
 METHOD:: initMainImprov
+(describe method here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: postWin
+(describe method here)
+
+returns:: (describe returnvalue here)
+
+METHOD:: postWhere
 (describe method here)
 
 returns:: (describe returnvalue here)
@@ -84,4 +115,4 @@ code::
 (some example code)
 ::
 </pre>
-<div class='doclink'>link::Classes/MainImprov::<br>sc version: 3.7.2</div></div></body></html>
+<div class='doclink'>link::Classes/MainImprov::<br>sc version: 3.8.0</div></div></body></html>
