--- a/Classes/Space.html
+++ b/Classes/Space.html
@@ -14,7 +14,7 @@
 <div class='contents'>
 <div class='header'>
 <div id='label'>SuperCollider CLASSES (extension)</div>
-<div id='categories'><a href='./../Browse.html#Libraries>JITLib>NodeProxy'>Libraries>JITLib>NodeProxy</a>, <a href='./../Browse.html#LiveCoding'>LiveCoding</a></div>
+<div id='categories'><a href='./../Browse.html#Libraries>ModImprov'>Libraries>ModImprov</a></div>
 <h1>Space</h1>
 <div id='summary'>A spatial tool for Ndefs</div>
 </div>
@@ -101,7 +101,18 @@ n.numChannels; //number of channels
 
 n.xset(\pan, Array.panDis(~arr.size, ~arr.size).scramble.postln); //evaluate several times
 
-Ndef.all.do(_.fadeTime = 6); //set fadeTimes for all Ndefs
+
+
+a = SpecFile.read(\space, \pan);
+
+m = ModMap(0.5); //fadeTime
+
+~node1 = m.map(n.ndefs[0], \pan, \sin, a, [\freq, 0.2]);
+
+~node2 = m.map(n.ndefs[1], \pan, \sin, a, [\freq, 0.1]);
+
+n.ndefs
+m.ndefs
 
 Ndef(\z, {Impulse.ar(5)}).ar(1);
 
