--- a/Classes/SystemClock.html
+++ b/Classes/SystemClock.html
@@ -19,7 +19,7 @@
 <div id='summary'>Clock running on separate accurately timed thread</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Core/<a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Core/Clock.sc'>Clock.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Clock.html">Clock</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Core/Clock.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Core/Clock.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Clock.html">Clock</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/AppClock.html">AppClock</a>, <a href="./../Classes/TempoClock.html">TempoClock</a></div>
 </div>
 <div id='toc'>
@@ -29,9 +29,11 @@
 <li class='toc3'><a href='#*clear'>clear</a> </li>
 <li class='toc3'><a href='#*schedAbs'>schedAbs</a> </li>
 <li class='toc3'><a href='#*play'>play</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-</ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
+<ul class='toc'><li class='toc3'><a href='#*tempo'>tempo</a> </li>
+</ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 
 <p>SystemClock is more accurate than AppClock, but cannot call GUI primitives.
@@ -83,7 +85,11 @@ r = Routine({ arg time;
 SystemClock.play(r);
 )</pre>
 
-<p>This example is only to show how to make calls to Cocoa/GUI when scheduling with the SystemClock. If you only wish to control the GUI, use AppClock.</div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/SystemClock.schelp'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/SystemClock.schelp</a><br>link::Classes/SystemClock::<br>sc version: 3.7.2</div></div></body></html>
+<p>This example is only to show how to make calls to Cocoa/GUI when scheduling with the SystemClock. If you only wish to control the GUI, use AppClock.</div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*tempo' href='./../Overviews/Methods.html#tempo'>tempo</a></h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*tempo' href='./../Overviews/Methods.html#tempo'>tempo</a> = </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Experimental/extSystemClock-tempo.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Experimental/extSystemClock-tempo.sc</a></div>
+<h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/SystemClock.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/SystemClock.schelp</a><br>link::Classes/SystemClock::<br>sc version: 3.8.0</div></div></body></html>
