--- a/Classes/TempoClock.html
+++ b/Classes/TempoClock.html
@@ -19,7 +19,7 @@
 <div id='summary'>tempo based scheduler</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Core/<a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/Core/Clock.sc'>Clock.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Clock.html">Clock</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Core/Clock.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/Core/Clock.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Clock.html">Clock</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='subclasses'>Subclasses: <a href="../Classes/TempoBusClock.html">TempoBusClock</a></div>
 <div id='related'>See also: <a href="./../Classes/AppClock.html">AppClock</a>, <a href="./../Classes/SystemClock.html">SystemClock</a></div>
 </div>
@@ -28,12 +28,13 @@
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
 <li class='toc3'><a href='#*default'>default</a> </li>
-<li class='toc2'><a href='#Forwarding to the default instance'>Forwarding to the default instance</a></li>
+<li class='toc2'><a href='#Forwarding%20to%20the%20default%20instance'>Forwarding to the default instance</a></li>
 <ul class='toc'><li class='toc3'><a href='#*stop'>stop</a>  <a href='#*play'>play</a>  <a href='#*sched'>sched</a>  <a href='#*schedAbs'>schedAbs</a>  <a href='#*clear'>clear</a>  <a href='#*tempo'>tempo</a>  <a href='#*etempo'>etempo</a>  <a href='#*beats'>beats</a>  <a href='#*beats2secs'>beats2secs</a>  <a href='#*secs2beats'>secs2beats</a>  <a href='#*nextTimeOnGrid'>nextTimeOnGrid</a>  <a href='#*timeToNextBeat'>timeToNextBeat</a>  <a href='#*setTempoAtBeat'>setTempoAtBeat</a>  <a href='#*setTempoAtSec'>setTempoAtSec</a>  <a href='#*setMeterAtBeat'>setMeterAtBeat</a>  <a href='#*beatsPerBar'>beatsPerBar</a>  <a href='#*baseBarBeat'>baseBarBeat</a>  <a href='#*baseBar'>baseBar</a>  <a href='#*playNextBar'>playNextBar</a>  <a href='#*beatDur'>beatDur</a>  <a href='#*elapsedBeats'>elapsedBeats</a>  <a href='#*beats2bars'>beats2bars</a>  <a href='#*bars2beats'>bars2beats</a>  <a href='#*bar'>bar</a>  <a href='#*nextBar'>nextBar</a>  <a href='#*beatInBar'>beatInBar</a> </li>
-</ul><li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+</ul><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*all'>all</a> </li>
 <li class='toc3'><a href='#*cmdPeriod'>cmdPeriod</a> </li>
+<li class='toc3'><a href='#*newBig'>newBig</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-stop'>stop</a> </li>
 <li class='toc3'><a href='#-clear'>clear</a> </li>
@@ -60,10 +61,13 @@
 <li class='toc3'><a href='#-seconds'>seconds</a> </li>
 <li class='toc3'><a href='#-beats2secs'>beats2secs</a> </li>
 <li class='toc3'><a href='#-secs2beats'>secs2beats</a> </li>
-<li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-archiveAsCompileString'>archiveAsCompileString</a> </li>
 <li class='toc3'><a href='#-etempo'>etempo</a> </li>
+<li class='toc3'><a href='#-initBig'>initBig</a> </li>
+<li class='toc3'><a href='#-ptr'>ptr</a> </li>
+<li class='toc3'><a href='#-setBeats'>setBeats</a> </li>
 <li class='toc3'><a href='#-setMeterAtBeat'>setMeterAtBeat</a> </li>
 <li class='toc3'><a href='#-setTempoAtBeat'>setTempoAtBeat</a> </li>
 <li class='toc3'><a href='#-setTempoAtSec'>setTempoAtSec</a> </li>
@@ -98,7 +102,7 @@ t = TempoClock.new(2, 0, thisThread.seconds - 5);
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*default' href='./../Overviews/Methods.html#default'>default</a> = value</h3>
 <div class='method'>
 <p>Sets or gets the permanent default TempoClock instantiated at startup.<pre class='code prettyprint lang-sc'>TempoClock.default.beats // beats since default TempoClock was started</pre>
-</div><h3><a class='anchor' name='Forwarding to the default instance'>Forwarding to the default instance</a></h3>
+</div><h3><a class='anchor' name='Forwarding%20to%20the%20default%20instance'>Forwarding to the default instance</a></h3>
 
 <p>The following methods only forward to the <a href="#*default">default instance</a>, allowing you to use the TempoClock class itself in place of <code class='code prettyprint lang-sc'>TempoClock.default</code>.<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*stop' href='./../Overviews/Methods.html#stop'>stop</a> </h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*play' href='./../Overviews/Methods.html#play'>play</a> (<span class='argstr'>task</span>, <span class='argstr'>quant</span>)</h3>
@@ -107,7 +111,7 @@ t = TempoClock.new(2, 0, thisThread.seconds - 5);
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*clear' href='./../Overviews/Methods.html#clear'>clear</a> (<span class='argstr'>releaseNodes</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*tempo' href='./../Overviews/Methods.html#tempo'>tempo</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*tempo' href='./../Overviews/Methods.html#tempo'>tempo</a> = <span class='argstr'>newTempo</span></h3>
-<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*etempo' href='./../Overviews/Methods.html#etempo'>etempo</a><h3 class='cmethodname'><span class='methprefix'>*</span><a name='*etempo' href='./../Overviews/Methods.html#etempo'>etempo</a> = <span class='argstr'>newTempo</span></h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*etempo' href='./../Overviews/Methods.html#etempo'>etempo</a> = <span class='argstr'>newTempo</span></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*beats' href='./../Overviews/Methods.html#beats'>beats</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*beats' href='./../Overviews/Methods.html#beats'>beats</a> = </h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*beats2secs' href='./../Overviews/Methods.html#beats2secs'>beats2secs</a> (<span class='argstr'>beats</span>)</h3>
@@ -130,10 +134,12 @@ t = TempoClock.new(2, 0, thisThread.seconds - 5);
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*nextBar' href='./../Overviews/Methods.html#nextBar'>nextBar</a> (<span class='argstr'>beat</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*beatInBar' href='./../Overviews/Methods.html#beatInBar'>beatInBar</a> </h3>
 <div class='method'>
-<p></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<p></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*all' href='./../Overviews/Methods.html#all'>all</a> </h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*cmdPeriod' href='./../Overviews/Methods.html#cmdPeriod'>cmdPeriod</a> </h3>
+<h3 class='cmethodname'><span class='methprefix'>*</span><a name='*newBig' href='./../Overviews/Methods.html#newBig'>newBig</a> (<span class='argstr'>tempo</span>, <span class='argstr'>beats</span>, <span class='argstr'>seconds</span>, <span class='argstr'>size: 1024</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/extTempoClock-bigNew.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/extTempoClock-bigNew.sc</a></div>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-stop' href='./../Overviews/Methods.html#stop'>stop</a> </h3>
 <div class='method'>
@@ -234,10 +240,16 @@ t.beats2secs(t.beats) // equivalent to t.seconds
 t.beats2secs(0) // how many seconds after startup did beat 0 occur?</pre>
 </div><h3 class='imethodname'><span class='methprefix'>-</span><a name='-secs2beats' href='./../Overviews/Methods.html#secs2beats'>secs2beats</a> (<span class='argstr'>secs</span>)</h3>
 <div class='method'>
-<p>Converts absolute <strong>seconds</strong> to absolute beats. Only works for times in the current tempo. If the tempo changes any computed time in future will be wrong.</div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<p>Converts absolute <strong>seconds</strong> to absolute beats. Only works for times in the current tempo. If the tempo changes any computed time in future will be wrong.</div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-archiveAsCompileString' href='./../Overviews/Methods.html#archiveAsCompileString'>archiveAsCompileString</a> </h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-etempo' href='./../Overviews/Methods.html#etempo'>etempo</a><h3 class='imethodname'><span class='methprefix'>-</span><a name='-etempo' href='./../Overviews/Methods.html#etempo'>etempo</a> = <span class='argstr'>newTempo</span></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-etempo' href='./../Overviews/Methods.html#etempo'>etempo</a> = <span class='argstr'>newTempo</span></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-initBig' href='./../Overviews/Methods.html#initBig'>initBig</a> (<span class='argstr'>tempo</span>, <span class='argstr'>beats</span>, <span class='argstr'>seconds</span>, <span class='argstr'>size</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/extTempoClock-bigNew.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Extensions/Various/extTempoClock-bigNew.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-ptr' href='./../Overviews/Methods.html#ptr'>ptr</a> </h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Experimental/extTempoClock-setBeats.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Experimental/extTempoClock-setBeats.sc</a></div>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-setBeats' href='./../Overviews/Methods.html#setBeats'>setBeats</a> (<span class='argstr'>beats: 0</span>)</h3>
+<div class='extmethod'>From extension in <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Experimental/extTempoClock-setBeats.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/downloaded-quarks/wslib/wslib-classes/Experimental/extTempoClock-setBeats.sc</a></div>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-setMeterAtBeat' href='./../Overviews/Methods.html#setMeterAtBeat'>setMeterAtBeat</a> (<span class='argstr'>newBeatsPerBar</span>, <span class='argstr'>beats</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-setTempoAtBeat' href='./../Overviews/Methods.html#setTempoAtBeat'>setTempoAtBeat</a> (<span class='argstr'>newTempo</span>, <span class='argstr'>beats</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-setTempoAtSec' href='./../Overviews/Methods.html#setTempoAtSec'>setTempoAtSec</a> (<span class='argstr'>newTempo</span>, <span class='argstr'>secs</span>)</h3>
@@ -315,4 +327,4 @@ t.stop;
 u.stop;
 )</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/TempoClock.schelp'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/TempoClock.schelp</a><br>link::Classes/TempoClock::<br>sc version: 3.7.2</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/TempoClock.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/TempoClock.schelp</a><br>link::Classes/TempoClock::<br>sc version: 3.8.0</div></div></body></html>
