--- a/ComputerWeb.html
+++ b/ComputerWeb.html
@@ -23,6 +23,6 @@
 <div id='toc'>
 <ul class='toc'></ul></div>
 <p>If you are not able to get git or the command line to work in your machine, you can access the module files directly from the Web:
-<p><a href="https://freuben.github.io/computerhelp/Computer.html">COMPUTER.PLAY ON THE WEB</a><div class='warning'><span class='warninglabel'>WARNING:</span> This method will only work if you have an Internet connection.</div><div class='note'><span class='notelabel'>NOTE:</span> Module materials here will be updated regularly.</div>
+<p><a href="https://freuben.github.io/york/Computer.html">COMPUTER.PLAY ON THE WEB</a><div class='warning'><span class='warninglabel'>WARNING:</span> This method will only work if you have an Internet connection.</div><div class='note'><span class='notelabel'>NOTE:</span> Module materials here will be updated regularly.</div>
 <p>Thanks,
 <p>Federico<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerWeb/HelpSource/ComputerWeb.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerWeb/HelpSource/ComputerWeb.schelp</a><br>link::ComputerWeb::<br>sc version: 3.8.0</div></div></body></html>
